--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ wheels/
 .installed.cfg
 *.egg
 mirage_venv/
+scripts/cluster_config
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
