--- a/scripts/mirage.template
+++ b/scripts/mirage.template
@@ -17,9 +17,8 @@ function extract_arg() {
 }
 #Simply check if a flag was passed. Returns "true" if true, else "false"
 function extract_flag() {
-	for cmd in $cmds
-	do
-		if [ "$cmd" = "$1" ]
+	for ((idx=0; idx<${#cmds[@]}; ++idx)); do
+		if [ "${cmds[idx]}" = "$1" ]
 		then
 			echo "true"
 			exit
@@ -27,28 +26,29 @@ function extract_flag() {
 	done
 	echo "false"
 }
+function get_gui_setting() {
+if [ "$(extract_flag "--no-gui")" = "true" ] || [ "$(extract_flag "-n")" = "true" ]
+then
+	echo NO
+else
+	echo YES
+fi
+
+}
 
 
 MASTER="$(extract_arg "--master" "$MASTER")"
 EXECUTOR_MEMORY="$(extract_arg "--executor-memory" "$EXECUTOR_MEMORY")"
 DRIVER_MEMORY="$(extract_arg "--driver-memory" "$DRIVER_MEMORY")"
 EXTRA_ARGS="$(extract_arg "--extra-spark-opts" "$EXTRA_ARGS")"
-NUM_EXEC="$(extract_arg "--num-executors" "$NUM_EXEC")"
-if [ "$(extract_flag "--no-gui")" = "true" ] || [ "$(extract_flag "-n")" = "true" ]
-then
-	export LA_WITH_GUI="no"
-else
-	export LA_WITH_GUI="yes"
-fi
-
+NUM_EXECUTORS="$(extract_arg "--num-executors" "$NUM_EXECUTORS")"
+export LA_WITH_GUI=$( get_gui_setting )
 if [ "$(extract_flag "--run")" = "true" ]
 then
 	export PYSPARK_DRIVER_PYTHON=python
 	export LA_EXIT_ON_COMPLETE="TRUE"
 	export LA_INFILE="${cmds[$(expr $# - 2)]}"
 	export LA_OUTFILE="${cmds[$(expr $# - 1)]}"
-	echo $INFILE
-	echo $OUTFILE
 	cmd="spark-submit --jars "$JAR_LOC" --conf spark.driver.maxResultSize="0" --master $MASTER --executor-memory $EXECUTOR_MEMORY --driver-memory $DRIVER_MEMORY "$EXTRA_ARGS" ../main.py --run "$LA_INFILE" --outfile "$LA_OUTFILE""
 	$cmd
 	exit
@@ -61,7 +61,7 @@ then
 
 elif [ "$(extract_flag "--cluster")" = "true" ] || [ "$(extract_flag "-c")" = "true" ]
 then
-	command="pyspark --jars "$JAR_LOC" --conf spark.driver.maxResultSize="0" --master $MASTER --executor-memory $EXECUTOR_MEMORY --driver-memory $DRIVER_MEMORY "$EXTRA_ARGS""
+	command="pyspark --jars "$JAR_LOC" --conf spark.driver.maxResultSize="0" --master $MASTER --num-executors $NUM_EXECUTORS --executor-memory $EXECUTOR_MEMORY --driver-memory $DRIVER_MEMORY "$EXTRA_ARGS""
 	export LA_IS_SIMULATION="true"
 	echo "$command"
 	$command
