--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,7 @@ repos:
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
         language_version: python3.11
+        args: [--pyink-indention 2]
 
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: v0.942
