--- a/mirage_ext/Cargo.toml
+++ b/mirage_ext/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-ndarray = "0.15.3"
+ndarray = { version = "0.15.3"}
 numpy = "0.15"
 
 [dependencies.pyo3]
