--- a/examples/microlensing_demo.yaml
+++ b/examples/microlensing_demo.yaml
@@ -10,14 +10,9 @@ Starfield:
   InitialMassFunction: Kroupa2001
   Seed: 110
 LensedImageCenter: [0.0, 0.0, 'uas']
-RayCount: 100000
+RayCount: 10000000
 SourceRegionDimensions: [100, 100, 'uas']
 Reducers:
   - MagnificationMapReducer:
-      Radius: [1, 'uas']
-      Resolution: [500, 500, '']
-  - LightCurvesReducer:
-      Radius: [1, 'uas']
-      Resolution: [10, '1/uas']
-      NumCurves: 10
-      Seed: 12
+      Radius: [0.5, 'uas']
+      Resolution: [800, 800, '']
