--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "mirage_ext/lib.rs"
 [dependencies]
 ndarray = { version = "0.15.3"}
 numpy = "0.15"
+kiddo  = "2.1.1"
 
 [dependencies.pyo3]
 version = "0.15.1"
