--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ crate-type = ["cdylib"]
 path = "mirage_ext/lib.rs"
 
 [dependencies]
-ndarray = { version = "0.15.3"}
-numpy = "0.15"
+ndarray = { version = "0.15.6", features = ["serde"] }
+numpy = "0.19.0"
 kiddo  = "2.1.1"
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.pyo3]
-version = "0.15.1"
+version = "0.19.0"
 features = ["extension-module"]
