Add better stopwatch support, and mass to the quasar model

--- a/examples/point_lens_demo.yaml
+++ b/examples/point_lens_demo.yaml
@@ -1,6 +1,7 @@
 LensingSystem_PointLens:
   Quasar:
     Redshift: 2.0
+    Mass: 1e9 solMass
   Redshift: 0.5
   Cosmology: WMAP7
   Mass: [1e12, solMass]
