--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.11"
 dependencies = [
   "dask==2023.6.0",
   "dask[distributed]==2023.6.0",
+  "dask-cloudprovider[aws]==2022.10.0",
   "numpy==1.23.5",
   "astropy==5.1",
   "bokeh==3.1.1",
@@ -20,6 +21,7 @@ dependencies = [
   "PyYAML==6.0",
   "cython==0.29.33",
   "hurry.filesize==0.9",
+  "pandas==2.0.2",
 ]
 
 [build-system]
