--- a/examples/microlensing_demo.yaml
+++ b/examples/microlensing_demo.yaml
@@ -1,6 +1,7 @@
 LensingSystem_MicrolensingLens:
   Quasar:
     Redshift: 1.69
+    Mass: 1e9 solMass
   Redshift: 0.04
   Cosmology: WMAP7
   Convergence: 0.3
@@ -10,7 +11,7 @@ Starfield:
   InitialMassFunction: Kroupa2001
   Seed: 110
 LensedImageCenter: [0.0, 0.0, 'uas']
-RayCount: 1600000000
+RayCount: 1_600_000_000
 SourceRegionDimensions: [100, 100, 'uas']
 Reducers:
   - MagnificationMapReducer:
