Simplify Quantity representation to use a string instead of heterogenous list. Fix tests. Update deps in pyproject to support running from a brand new conda env

--- a/examples/local_microlensing_demo.yaml
+++ b/examples/local_microlensing_demo.yaml
@@ -15,6 +15,6 @@ RayCount: 16000000
 SourceRegionDimensions: [100, 100, 'uas']
 Reducers:
   - MagnificationMapReducer:
+      Name: magmap
       Radius: 1.2 uas
-      Variation: Radius = linspace(1.2, 12, 5) uas
       Resolution: [1920, 1080, '']
