--- a/examples/point_lens_demo.yaml
+++ b/examples/point_lens_demo.yaml
@@ -7,5 +7,6 @@ LensingSystem_PointLens:
   Mass: [1e12, solMass]
 Reducers:
 - LensedImageReducer:
+    Name: image
     Query: [0.3, 0.7, 'arcsec']
     Radius: [0.1, 'arcsec']
