--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,16 +26,21 @@ repos:
   #     exclude_types: [json]
   #     args: [--ignore-words-list, 'datas']
 
-  - repo: https://github.com/google/pyink
-    rev: 23.3.0
+  - repo: https://github.com/hhatto/autopep8
+    rev: v2.0.4  # select the tag or revision you want, or run `pre-commit autoupdate`
     hooks:
-      - id: pyink
-        # It is recommended to specify the latest version of Python
-        # supported by your project here, or alternatively use
-        # pre-commit's default_language_version, see
-        # https://pre-commit.com/#top_level-default_language_version
-        language_version: python3.11
-        args: [--pyink-indentation=2]
+      - id: autopep8
+
+  # - repo: https://github.com/google/pyink
+  #   rev: 23.3.0
+  #   hooks:
+  #     - id: pyink
+  #       # It is recommended to specify the latest version of Python
+  #       # supported by your project here, or alternatively use
+  #       # pre-commit's default_language_version, see
+  #       # https://pre-commit.com/#top_level-default_language_version
+  #       language_version: python3.11
+  #       args: [--pyink-indentation=2]
 
   # - repo: https://github.com/pre-commit/mirrors-mypy
   #   rev: v0.942
