--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,7 @@ module-name = "mirage_ext"
 [project.urls]
 Repo = "https://github.com/jordankoeller/mirage"
 
-[tool.pyink]
-pyink-indention = 2
-
-[flake8]
-max-line-length = 88
+[tool.autopep8]
+max_line_length = 88
+ignore = [ "E121" ]
+indent_size = 2
